Fix login otp btns aligning

--- a/src/components/Auth/_Auth.scss
+++ b/src/components/Auth/_Auth.scss
@@ -128,6 +128,13 @@
 
         .sign-in-wrapper {
           margin: 0 60px;
+
+          .sign-in--otp {
+            .buttons-row {
+              display: flex;
+              justify-content: space-between;
+            }
+          }
         }
 
         .sign-in-user--item {
